# thewired

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest_on_push_to_any_branch.yaml
tests/: test_basenamespacenode.py  test_callableMapped.py  test_callableNode.py  test_configparser.py  test_delegatenode.py  test_handlenode.py  test_mappedAttributesNode.py  test_namespace.py  test_nsid.py  test_secondLifeNode.py  test_thewired.py
thewired/: __init__.py  aliasnode.py  exceptions.py  filteredcollection.py  loginfo.py  namespaceconfigparser.py  namespaceconfigparser2.py  nsidchainmap.py  testobjects.py  util.py
thewired/namespace/: __init__.py  namespace.py  nsid.py
thewired/namespace/namespacenode/: __init__.py  base.py  callable.py  delegate.py  dunders.py  dynamic_node.py  handle.py  mapped.py  namespacenode.py  secondlife.py
thewired/provider/: .parametizedcall.py.swp  __init__.py  addendumformatter.py  parametizedcall.py  providerabc.py  providermap.py
