[tool.poetry]
name = "thewired"
version = "0.0.1"
description = "library to make simple namespaces that map to more complex sdk expressions"
authors = ["James Light <j.gareth.light@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
