[tool.poetry]
name = "thewired"
version = "0.0.1"
description = "library to make simple namespaces that map to more complex sdk expressions"
authors = ["James Light <j.gareth.light@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ipython = "^8.10.0"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
